# rpi_pico_test_input

./: .gitignore  CMakeLists.txt  LICENSE  README.md  internal_temp.cpp  internal_temp.h  main.cpp
